<resources>
    <string name="app_name">crvenkappica</string>
    <string name="action_settings">Postavke</string>
    <string name="name">Ime</string>
    <string name="surname">Prezime</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka:</string>
    <string name="password_rp">Ponovi lozinku:</string>
    <string name="mail">Email adresa</string>
    <string name="date">Datum rođenja</string>
    <string name="name_hint">Unesi ime</string>
    <string name="surname_hint">Unesi prezime</string>
    <string name="username_hint">Unesi korisničko ime</string>
    <string name="password_hint">Unesi lozinku</string>
    <string name="password_rp_hint">Ponovi lozinku</string>
    <string name="mail_hint">Unesi email adresu</string>
    <string name="date_hint">Datum rođenja</string>
    <string name="title_activity_activity__registration">Registracija</string>
    <string name="title_activity_login">Prijava</string>
    <string name="strUser">Korisničko ime</string>
    <string name="strPass">Lozinka</string>
    <string name="strLogin">Prijava</string>
    <string name="strRegister">Registracija</string>
    <string name="title_activity_logon">Prijava</string>
    <string name="string_registerme">Registriraj me</string>
    <string name="string_registration_progress">Registracija u tijeku</string>
    <string name="title_activity_index">Index</string>
    <string name="title_activity_navigacija">Navigacija</string>

    <string name="title_section1">Obavijesti</string>
    <string name="title_section2">Profil</string>
    <string name="title_section3">Pretraga</string>
    <string name="lovista">Lovišta</string>
    <string name="vrijeme">Vremensko izvješće</string>

    <string name="navigation_drawer_open">Otvori navigaciju</string>
    <string name="navigation_drawer_close">Zatvori navigaciju</string>

    <string name="action_example">Example action</string>
    <string name="camerainit">Odaberi sliku:</string>
    <string name="title_activity_activity_album">activity_album</string>
    <string name="title_activity_album">Album</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_album2">Album2</string>
    <string name="moon_phases">Mjesečeve faze</string>
    <string name="hunting_seasons">Sezone lova</string>

    <string-array name="months_array">
        <item>Siječanj</item>
        <item>Veljača</item>
        <item>Ožujak</item>
        <item>Travanj</item>
        <item>Svibanj</item>
        <item>Lipanj</item>
        <item>Srpanj</item>
        <item>Kolovoz</item>
        <item>Rujan</item>
        <item>Listopad</item>
        <item>Studeni</item>
        <item>Prosinac</item>
    </string-array>

    <string name="album">Album</string>
    <string name="album_upute">Kliknite na pojedinu sliku kako bi ju otvorili u punom prikazu.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
