<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".fragments.NavigationFragment$PlaceholderFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Profil"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="39dp"
        android:id="@+id/view"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:id="@+id/ime"
            android:text="ime"
            android:textColor="#090909" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:textSize="15dp"
            android:layout_marginTop="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:id="@+id/prezime"
            android:textColor="#090909" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="25dp"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:textColor="#090909"
            android:textSize="22dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="15dp"
            android:text="@string/date_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datum_rodenja"
            android:textSize="22dp"
            android:textColor="#090909" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:textSize="15dp"
            android:layout_marginTop="25dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_below="@+id/layout1"
            android:id="@+id/relative2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:id="@+id/status"
                android:textColor="#090909"
                android:onClick="onClick"
                android:clickable="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

            <EditText
                android:id="@+id/etStatus"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.57" />

            <Button
                android:id="@+id/button_status"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Završi"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:textColor="#f9f7f7"/>
            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/button_album"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/album"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:textColor="#f9f7f7"/>
    </LinearLayout>

</RelativeLayout>